# gisst

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .trufflehogignore  Dockerfile.ci  Dockerfile.dev  Dockerfile.dist  README.org  dist-update-docker.sh  dist-update.sh  manifest-ci.json  manifest.json  mypatch.patch  mypatch2.patch  notes.txt  package-lock.json  run-all.bat  run.sh
backend/: Cargo.toml  bug.json  clear_data.sh  cuefiles_to_m3u.sh  docker-compose.yml  env.template  load_examples.sh  rebaseline_examples.sh  reset.sh  sqlx-data.json  uncommitted-changes.patch  v86dump.js
backend/.cargo/: audit.toml
backend/.sqlx/: .gitattributes  query-00556304b7a275745656ac9b92e544a2d76c5af4ece65d23cfb6ad00079b8125.json  query-01f28be46d5414752dea41a227b53ca275a7dae34480691fef14c9971e5706e7.json  query-01f46cff004cf5a1b0a4205af914b31ae580f40c888261883c75f45eab0fa0f8.json  query-020f8d8294ac3833bb3bad2a9658c8db98e5fbb0be693599c065a993a8c9623d.json  query-032fe1d2804c5491daa1317112c361e4135884e99426f191dab70260510be43a.json  query-033c104d538eb5247cc8b1f2b7d02d000806cfcce364a9c68ba0e57690dbe997.json  query-03661489902c5f78414c75a4302ed2cc773fa85894f738af04f1e6f36a7a30ab.json  query-0368e5737412d5ae16c4319fa33289a9af1bf6e4768650baf82db7f236aeeeca.json  query-03f2545dc2543b32943b495d894fa891cdc5de22d2a09a896f2d39b5617ad81d.json  query-048ea0afde03c8d7f8847f976f74e7f4547cda98269a40e8865d85b36da0ddd2.json  query-04abc8af521643445d34d0b758752b920ca82ac32ff504bb8c1e9f0df9bb3490.json  query-04c9b131268c9d2834bfb94ea414e7ec8e1b2191d6c52a758bad4ab23382010c.json  query-04dbf002f090e6ab32db39930fa944dca87a322394fb9014e5ad65eb3c9085ea.json  query-05bcf7ee2c21104a923022aa59090777a5caf30c91d261b7fe882ad1fbaaf8fd.json  query-08008b77cb86723462875a3deda5c45b46cf1e177ec567e4f4da63f3c8bcf633.json  query-09b1c5e775a12e2110d1481f10637e07689dfc961ee57e6273cbda9feae85da3.json  query-0a4816f16535697e6bba18541167b564037ac37f572392bc4655c877d0f6202e.json  query-0b7f6e4689d116919ba64ec98ef7208ed76ce08a6b9eaabbfd37e6e71702c24a.json  query-0da5d1e19e73631fa88ab8d5d82623d149aa6122be70b2bd27d51027dfbeeb48.json  query-0ed6dc2a5dba22d691c8684595302329edeb27c1a7e7020e7aefd4b3575590d6.json  query-105d12cffbb1da8bc0d5dd372ae6dad859aa5741393199412bb0698e009f6811.json  query-10dc34026799629fdbc2edd6dc01afa24f798bb66312ccd24ad35b5829eb0668.json  query-11d4f2cd2ff61f275515a35647e4b4cce93959705f38a27b654e4c71ea652c8d.json  query-11dc94418a1a88466075bdbd388ea7b0f0fa51cb5a5b7d51ca544507d41c0c98.json  query-12c7752af135f6a52171ecda6c8405ca8198b14b7b5991e05d2a976319f91787.json  query-12fa2cd24f6e48457fac9deb70adc785fdb4ffe9ececa1f137c5dd563a1f7a6c.json  query-16d617c5baae6e1fc0021ce2b411adc226997785bb92d60e21c4d624a9d66f6b.json  query-17034d1684aec3a4acc20fcbe6d143936cdef5c976c4351d0228d015433d979f.json  query-171c94bfa7f4a5863478fd865c1b8dc068b4e0dbe15a15dbe2117a144a27f400.json  query-184f8d7283ba023f1699ac7bcdd7ed5c4a61d041379727f8f86471d1a5d30e85.json  query-18f1d289268e9688b6c14a39eca3b8e4609b5c4b3218677100970774cdd17f9b.json  query-190a8b6021ed416f3a085e5494c5efb30dcb32bf495aae7b299ffca5d4ff2bd8.json  query-193e938ad4bb9a0bce401d793718affc5d4d7ecfe01b789517712fb56e6b5994.json  query-1ad2f0d68acd9f3f42ab753d7253cb1b184e7467a229a3b63bebb754c49c6f11.json  query-1b875ac568bd337fb12c5a94388476032420693d6fd06a87205eda9ae151324f.json  query-1bb7d7fb4a7ab3cb30be2a38cf5d81e15f5724986efdf8bff217d869978cc4c4.json  query-1d2d01e223c63349213abe0248523da7e040f1cafcc4a68870fc953a4b192459.json  query-1d52e5fb9a93452424bedb9feeefb6dfca8ffc687f59f2e75a0f66704f1501ec.json  query-1d61c07142aa3ff0318244ea7a62eb6ef20345a3bee5e10473764241d6ed5758.json  (+300 more)
backend/config/: default.toml
backend/docker-configs/: config-spm.yaml  old-docker-compose.yml  otel-collector-config.yml  prometheus.yml
backend/etc/: example-.env  example-ingest.sh  example-runserver.sh  gisst-search.service  gisst-tracing.service  gisst.service  gisst.template.conf  nightly-build.service  nightly-build.sh  nightly-build.timer  provisioning.txt
backend/examples/: load_examples.sh
backend/gisst/: Cargo.toml
backend/gisst-cli/: Cargo.toml
backend/gisst-server/: Cargo.toml  build.rs
backend/ingest/: Cargo.toml  build.rs
backend/meili/: README.org  init_indices.sh
backend/migrations/: 20230425185923_create_base_tables.down.sql  20230425185923_create_base_tables.up.sql  20230915191645_add_user_table.down.sql  20230915191645_add_user_table.up.sql  20230926221258_alter_creator_table.down.sql  20230926221258_alter_creator_table.up.sql  20231013214239_alter-field-nullability.down.sql  20231013214239_alter-field-nullability.up.sql  20240525165330_Add_an_object_role_index_column_to_instanceObject.down.sql  20240525165330_Add_an_object_role_index_column_to_instanceObject.up.sql  20240525171849_add_instance_derived_from_inst_and_instance_derived_from_state_columns_to_instance.down.sql  20240525171849_add_instance_derived_from_inst_and_instance_derived_from_state_columns_to_instance.up.sql  20240525231142_remove_uniqueness_constraint_on_file_hash_index.down.sql  20240525231142_remove_uniqueness_constraint_on_file_hash_index.up.sql  20241029192820_make_file_dest_path_a_complete_path.down.sql  20241029192820_make_file_dest_path_a_complete_path.up.sql  20241101170038_derived-works.down.sql  20241101170038_derived-works.up.sql  20241104173438_cleanup_crud.down.sql  20241104173438_cleanup_crud.up.sql  20241104181553_instancework-view.down.sql  20241104181553_instancework-view.up.sql  20241119213025_user-sub-not-null.down.sql  20241119213025_user-sub-not-null.up.sql  20250414161147_add-bookkeeping.down.sql  20250414161147_add-bookkeeping.up.sql  20250423191345_extended_save_table.down.sql  20250423191345_extended_save_table.up.sql  20251201224703_create_core_table.down.sql  20251201224703_create_core_table.up.sql  20260317181448_core_platform.down.sql  20260317181448_core_platform.up.sql  20260417225404_core_platform_in_primary_key.down.sql  20260417225404_core_platform_in_primary_key.up.sql  20260422175619_add-user-role.down.sql  (+9 more)
gisst-server/: Cargo.toml  build.rs
(+546 files in other folders)
