[workspace]
members = ["gisst", "gisst-server", "gisst-cli", "ingest", "mirror-rdb", "rdb-sys"]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2024"

#[profile.dev]
#debug = 0

[profile.dev.package.md-5]
opt-level = 3
[profile.dev.package.sqlx-macros]
opt-level = 3
# [profile.dev]
# debug=line-tables-only

