[package]
name = "gisst-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = { version = "0.6.12", features = ["multipart", "headers"] }
bytes = { version = "1.4.0", features = ["serde"] }
clap = { version = "4.2.1", features = ["derive"] }
config = {  version = "0.13.3", features = ["toml"], default-features = false }
crc = "3.0.1"
futures = "0.3.28"
log = "0.4.17"
md5 = "0.7.0"
minijinja = "0.31.1"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }
thiserror = "1.0.40"
time = { version = "0.3.21", features = ["serde"] }
tokio = { version = "1.27.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.3.1", features = ["serde", "v4"] }
