[package]
name = "gisst-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "gisstlib"
path = "src/lib.rs"

[[bin]]
name = "gisst-server"
path = "src/bin/gisst-server/src/main.rs"

[[bin]]
name = "gisst-cli"
path = "src/bin/gisst-server-cli/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
axum = { version = "0.6.12", features = ["multipart", "headers"] }
axum-macros = "0.3.8"
base64 = "0.21.2"
bytes = { version = "1.4.0", features = ["serde"] }
clap = { version = "4.2.1", features = ["derive", "cargo", "env"] }
clap-verbosity-flag = "2.0.1"
config = {  version = "0.13.3", features = ["toml"], default-features = false }
crc = "3.0.1"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.17"
md5 = "0.7.0"
minijinja = {version="0.34.0",features=["builtins", "macros", "json"]}
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["raw_value"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }
thiserror = "1.0.40"
time = { version = "0.3.21", features = ["serde", "parsing"] }
tokio = { version = "1.27.0", features = ["full"] }
tower = {version="0.4.13",features=["util"]}
tower-http = { version = "0.4.0", features = ["fs", "trace", "cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.3.1", features = ["serde", "v4"] }
walkdir = "2.3.3"
