[package]
name = "gisst-cli"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.3"
config = {  version = "0.15.11", features = ["toml"], default-features = false }
uuid = { version = "1.8", features = ["serde", "v4"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["raw_value"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"], default-features=false }
tokio = { version = "1.27.0", features = ["full"] }
thiserror = "2.0.12"
log = "0.4.17"
env_logger = "0.11.8"
clap = { version = "4.2.1", features = ["derive", "cargo", "env"] }
clap-verbosity-flag = "3.0.2"
anyhow = "1.0.70"
gisst = { path = "../gisst" }
chrono = { version = "0.4.28", features = ["clock"]}
