[package]
name                    = "gisst"
version.workspace = true
edition.workspace = true

[features]
default=[]
fatfs_logging=["fatfs/log_level_trace"]

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros", "bigdecimal"], default-features=false }
uuid                    = { version = "1.8", features = ["serde", "v4"] }
serde                   = { version = "1.0.159", features = ["derive"] }
thiserror               = "2.0.12"
log                     = "0.4.17"
tokio                   = { version = "1.27.0", features = ["full"] }
md-5                    = "0.10"
bytes                   = { version = "1.4.0", features = ["serde"] }
async-compression       = { version = "0.4", features = ["tokio", "gzip", "zstdmt"] }
chrono = {version = "0.4.28", features = ["serde"]}
serde_with = { version = "3.3.0", features = ["base64"] }
tracing = "0.1.40"
tree_magic_mini = {version="3.1.6", features=["with-gpl-data"]}
fatfs = {git="https://github.com/rafalh/rust-fatfs/", rev="4eccb50d011146fbed20e133d33b22f3c27292e7"}
mbrman = "0.5.2"
fscommon = "0.1.1"
zip = "2.1.2"
opentelemetry = "0.31"
num-traits = "0.2.19"
meilisearch-sdk = "0.32.0"
futures = "0.3.31"
