[package]
name = "ingest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.3"
uuid = { version = "1.8", features = ["serde", "v4"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["raw_value"] }
thiserror = "1.0.40"
log = "0.4.17"
tokio = { version = "1.27.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json"] }
env_logger = "0.10.0"
clap = { version = "4.2.1", features = ["derive", "cargo", "env"] }
clap-verbosity-flag = "2.0.1"
anyhow = "1.0.70"
gisst = { path = "../gisst" }
rdb-sys = { path = "../rdb-sys" }
chrono = { version = "0.4.28", features = ["clock"]}
md-5                    = "0.10"
