[package]
name = "ingest"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.5.0"
uuid = { version = "1.23", features = ["serde", "v4"] }
thiserror = "2.0.18"
log = "0.4.29"
tokio = { version = "1.52.3", features = ["full"] }
sqlx = { version = "0.9", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"], default-features=false }
env_logger = "0.11.10"
clap = { version = "4.6.1", features = ["derive", "cargo", "env"] }
clap-verbosity-flag = "3.0.4"
anyhow = {version="1.0.102", features=["backtrace"]}
gisst = { path = "../gisst" }
rdb-sys = { path = "../rdb-sys" }
chrono = { version = "0.4.44", features = ["clock"]}
md-5                    = "0.11"
digest-io               = "0.1.0"
base16ct                = {version="1.0.0",features=["alloc"]}
regex = "1.12.3"
rayon = "1.12.0"
chd = "0.3.4"
