[package]
name = "mirror-rdb"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0.18"
log = "0.4.29"
tokio = { version = "1.52.3", features = ["full"] }
sqlx = { version = "0.9", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"], default-features=false }
env_logger = "0.11.10"
clap = { version = "4.6.1", features = ["derive", "cargo", "env"] }
clap-verbosity-flag = "3.0.4"
anyhow = {version="1.0.102", features=["backtrace"]}
gisst = { path = "../gisst" }
rdb-sys = { path = "../rdb-sys" }
